# TrustSearch

./: .gdbinit  .gitignore  CMakeLists.txt  Container-back.cpp  Container-olc.cpp  Container.cpp  Makefile  Multi_Index.cpp  README.md  README.txt  app  read  read.cpp  readme7-17.md  run.sh  tmp.txt  zzz.cpp
App/: App.cpp  App.h
App/TrustedLibrary/: LibHelloworld.cpp  PartitionIndex.cpp  testInvalid.cpp  test_invalid.cpp
Client/: CMakeLists.txt  client.cc  sessionKeyExchange.cc
Comm/: cryptoPrimitive.cpp  serverOptThread.cpp  sslConnect.cpp
Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.lds  Enclave_private_test.pem
Enclave/ServerECall/: ecallEnc.cpp  ecallEnc.edl  ecallEnc.h
Enclave/TrustedLibrary/: Container.cpp  Container.cppCnd  Container.cppx  Container.edl  Container.h  HelloWorld.cpp  HelloWorld.edl  knn-query.cpp  partition.cpp  partition.h
Enclave/TrustedLibrary/hashfunc/: cmsketch.cpp  crypto.cpp  murmurHash.cpp
Enclave/TrustedLibrary/libfor/: Makefile  for.c  for.h  test
Enclave/TrustedLibrary/lz4/: ecallLz4.cpp
Enclave/TrustedLibrary/murmurhash/: murmurHash.cpp
Enclave/TrustedLibrary/sparse_hash/: sparse_hashtable.h
Enclave/TrustedLibrary/tsl/: bloom_filter.hpp
baseline/FULL-enc/Client/: CMakeLists.txt  client.cc
baseline/FULL-enc/Comm/: CMakeLists.txt  PaillierEnc.cpp  crypto.cpp  cryptoPrimitive.cpp  serverOptThread.cpp  sslConnect.cpp
baseline/FULL-enc/Server/: App.cpp  App.h  CMakeLists.txt
baseline/FULL-enc/Server/Container/: CMakeLists.txt  Container.cpp  Container.h
baseline/FULL-enc/Server/Database/: CMakeLists.txt  PartEncIndex.cpp
baseline/FULL-enc/Server/Database-build/: Makefile  cmake_install.cmake
baseline/FULL-enc/Server/GarbleCircuit/: CMakeLists.txt  test.cpp
baseline/FULL-enc/Server/TrustedLibrary/: client.cc  readDataSet.cpp
baseline/FULL-enc/include/: PaillierEnc.h  PartEncIndex.h  constVar.h  crypto.h  sslConnection.h  util.h
baseline/Partial-enc/Client/: CMakeLists.txt  client.cc
baseline/Partial-enc/Comm/: serverOptThread.cpp  sslConnect.cpp
baseline/Partial-enc/Database/: PartEncIndex.cpp
baseline/Partial-enc/Server/: App.cpp  App.h  CMakeLists.txt
baseline/Partial-enc/Server/Container/: CMakeLists.txt  Container.cpp  Container.h
baseline/Partial-enc/Server/Database-build/: Makefile  cmake_install.cmake
baseline/Partial-enc/Server/TrustedLibrary/: readDataSet.cpp
baseline/Partial-enc/include/: PartEncIndex.h  constVar.h  cryptoPrimitive.h  serverOptThead.h  util.h
docs/: Progress Record.md  outline.md  test_plan.md
enclave/: helloworld.conf
include/: AtomicArray.h  chunkStructure.h  cmsketch.h  constVar.h  crypto.h  cryptoPrimitive.h  serverOptThead.h  sslConnection.h  util.h
object-oriented/: Container.cpp  Container.h  a.cpp  main.cpp
read128_code/: CMakeLists.txt  README.md  readData.cpp
read128_code/readFromCfile/: testRead  testRead.cpp
test_multi_index/App/: App.cpp
test_multi_index/Enclave/: Enclave.cpp  Enclave.edl
test_multi_index/Enclave/Edger8rSyntax/: Arrays.cpp  Pointers.cpp
